--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,9 @@
 html, body {
   padding: 0;
   margin: 0;
-  height: 100%; }
+  height: 100%;
+  scroll-behavior: smooth;
+  font-family: 'Montserrat', sans-serif; }
 
 h1, h2, h3, h4, h5, h6, fieldset, dd, button, form, ul, ul li, ol, ol li, dl, p, input, button, label, td, abbr, article, aside, audio, bb, canvas, datagrid, datalist, details, dialog, eventsource, figure, footer, header, hgroup, mark, menu, meter, nav, output, progress, section, time, video, blockquote, address {
   margin: 0;
@@ -39,7 +41,8 @@ html, body {
   height: 100%; }
 
 body {
-  color: #fff; }
+  color: #fff;
+  box-sizing: border-box; }
 
 img {
   max-width: 100%;
@@ -128,6 +131,10 @@ input[type='text'], input[type='password'], textarea, input[type='email'], input
 
 /* @end */
 /****************** Import Files*******************/
+.custom_container {
+  width: 90%;
+  margin: 0 auto; }
+
 .opa1 {
   opacity: 1;
   transition: all 3s ease; }
@@ -141,8 +148,12 @@ input[type='text'], input[type='password'], textarea, input[type='email'], input
 .head_section {
   background: #00AEEF; }
   .head_section .logo {
-    position: absolute;
-    top: 0; }
+    position: relative;
+    width: 65%;
+    left: -235px;
+    cursor: pointer; }
+    .head_section .logo img {
+      width: 30%; }
   .head_section img {
     position: absolute;
     right: 0;
@@ -150,7 +161,7 @@ input[type='text'], input[type='password'], textarea, input[type='email'], input
     width: 42%; }
   .head_section #head_content {
     position: absolute;
-    top: 40%;
+    top: 30%;
     left: 5%; }
     .head_section #head_content #cta {
       margin-top: 80px;
@@ -165,7 +176,8 @@ input[type='text'], input[type='password'], textarea, input[type='email'], input
       color: #000;
       font-size: 40px;
       font-family: 'Montserrat', sans-serif;
-      line-height: 55px; }
+      line-height: 55px;
+      margin-top: 130px; }
       .head_section #head_content h2 span {
         font-weight: bold;
         font-size: 42px; }
@@ -210,5 +222,122 @@ p {
     font-size: 16px;
     font-family: 'Montserrat', sans-serif;
     line-height: 25px; }
+
+header {
+  background: #000;
+  width: 100%;
+  float: left; }
+  header .nav_logo {
+    float: left; }
+    header .nav_logo img {
+      width: 28%;
+      margin-top: 12px; }
+  header nav {
+    float: right; }
+  header li {
+    font-size: 16px;
+    color: #fff;
+    font-family: 'Montserrat', sans-serif;
+    display: inline-block;
+    padding: 25px;
+    cursor: pointer; }
+    header li:hover {
+      background: #fff; }
+    header li:hover a {
+      color: #00AEEF; }
+    header li a {
+      color: #fff; }
+
+.about_me {
+  width: 100%;
+  float: left; }
+  .about_me .about_me_img {
+    float: left;
+    padding: 0;
+    background: url(../img/about-pic.jpg) no-repeat 0px 0px;
+    min-height: 580px;
+    background-size: cover;
+    -o-background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -ms-background-size: cover;
+    width: 50%; }
+  .about_me .about_me_content {
+    width: 50%;
+    float: left;
+    padding: 100px 90px 0 90px;
+    box-sizing: border-box; }
+    .about_me .about_me_content h2 {
+      color: #000;
+      font-size: 35px;
+      font-family: 'Montserrat', sans-serif;
+      line-height: 55px; }
+      .about_me .about_me_content h2 span {
+        font-weight: bold; }
+    .about_me .about_me_content p {
+      color: #000;
+      font-size: 16px;
+      font-family: 'Montserrat', sans-serif;
+      line-height: 25px;
+      line-height: 35px; }
+    .about_me .about_me_content .resume_download {
+      padding: 15px 30px;
+      background: none;
+      border: 1px solid #00AEEF;
+      font-size: 16px;
+      margin-top: 40px;
+      transition: all 0.7s ease;
+      cursor: pointer;
+      font-family: 'Montserrat', sans-serif; }
+      .about_me .about_me_content .resume_download:hover {
+        background: #00AEEF;
+        transition: all 0.7s ease; }
+      .about_me .about_me_content .resume_download:hover a {
+        color: #fff;
+        transition: all 0.7s ease; }
+      .about_me .about_me_content .resume_download a {
+        color: #000;
+        transition: all 0.7s ease; }
+
+.stick {
+  position: fixed;
+  top: 0; }
+
+.servies {
+  width: 100%;
+  float: left;
+  padding: 5% 0;
+  background: #e0e0e0; }
+  .servies h2 {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+    font-size: 40px;
+    text-align: center;
+    text-transform: capitalize;
+    color: #000; }
+  .servies .service_list {
+    width: 80%;
+    margin: 0 auto; }
+  .servies .list {
+    display: flex;
+    flex-wrap: wrap; }
+  .servies .list-item {
+    display: flex;
+    padding: 2.5em;
+    width: 100%; }
+  @media all and (min-width: 40em) {
+    .servies .list-item {
+      width: 50%; } }
+  @media all and (min-width: 60em) {
+    .servies .list-item {
+      width: 27%; } }
+  .servies .list-content {
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    padding: 1em;
+    width: 100%; }
+  .servies .list-content p {
+    flex: 1 0 auto; }
 
 /*# sourceMappingURL=style.css.map */
