--- a/sass/_reset.scss
+++ b/sass/_reset.scss
@@ -1,6 +1,6 @@
 
 /* @group global reset */
-html, body { padding:0; margin:0; height:100%; }
+html, body { padding:0; margin:0; height:100%; scroll-behavior: smooth;font-family: 'Montserrat', sans-serif;}
 h1, h2, h3, h4, h5, h6, fieldset, dd, button, form, ul, ul li, ol, ol li, dl, p, input, button, label, td, abbr, article, aside, audio, bb, canvas, datagrid, datalist, details, dialog, eventsource, figure, footer, header, hgroup, mark, menu, meter, nav, output, progress, section, time, video, blockquote, address { margin: 0; padding: 0; }
 sup { vertical-align:top; line-height:1; }
 ul li, ol li, menu li { list-style-type: none; }
@@ -14,6 +14,7 @@ a:hover, a:active, a:focus, input:active, textarea:active, input:focus, textarea
 html, body { padding:0; margin:0; height:100%; }
 body{
 	color:#fff;
+	box-sizing: border-box;
 }
 img{
     max-width:100%;
