--- a/sass/_reset.scss
+++ b/sass/_reset.scss
@@ -1,6 +1,6 @@
 
 /* @group global reset */
-html, body { padding:0; margin:0; height:100%; scroll-behavior: smooth;font-family: 'Montserrat', sans-serif;}
+html, body { padding:0; margin:0; height:100%; font-family: 'Montserrat', sans-serif;}
 h1, h2, h3, h4, h5, h6, fieldset, dd, button, form, ul, ul li, ol, ol li, dl, p, input, button, label, td, abbr, article, aside, audio, bb, canvas, datagrid, datalist, details, dialog, eventsource, figure, footer, header, hgroup, mark, menu, meter, nav, output, progress, section, time, video, blockquote, address { margin: 0; padding: 0; }
 sup { vertical-align:top; line-height:1; }
 ul li, ol li, menu li { list-style-type: none; }
@@ -38,7 +38,7 @@ a {
 	cursor:pointer;
 	outline:0;
 }
-a:hover { text-decoration:none; color:#e6d4b3; }
+a:hover { text-decoration:none;}
 input[type='text'], input[type='password'], textarea, input[type='email'], input[type='tel'], input[type='number']{
 	display:block;
 	font:normal 12px/15px arial;
