--- a/sass/style.scss
+++ b/sass/style.scss
@@ -515,7 +515,7 @@ li{
         background:url(../img/digital-latte.jpg);
         background-repeat: no-repeat;
         background-position:center;
-        background-size: 100%;
+        background-size: cover;
       }
       .fourtin{
         grid-column:8/15;
@@ -523,7 +523,7 @@ li{
         background:url(../img/hipec.jpg);
         background-repeat: no-repeat;
         background-position:center;
-        background-size: 100%;
+        background-size: cover;
       }
       .content-two{
         display: grid;
@@ -537,7 +537,7 @@ li{
           background:url(../img/akshar.jpg);
           background-repeat: no-repeat;
           background-position:center;
-          background-size: 100%;
+          background-size: cover;
         }
         .sixteen{
           grid-column:4/6;
@@ -545,7 +545,7 @@ li{
           background:url(../img/brew-a-web.jpg);
           background-repeat: no-repeat;
           background-position:center;
-          background-size: 100%;
+          background-size: cover;
         }
         .seventeen{
           grid-column:6/9;
@@ -553,7 +553,7 @@ li{
           background:url(../img/renaissance.jpg);
           background-repeat: no-repeat;
           background-position:center;
-          background-size: 100%;
+          background-size: cover;
         }
         .eighteen{
           grid-column:1/4;
@@ -561,35 +561,35 @@ li{
           background:url(../img/new-haven.jpg);
           background-repeat: no-repeat;
           background-position:center;
-          background-size: 100%;
+          background-size: cover;
         }
         .ninteen{
           grid-column:4/6;
           background:url(../img/peninsula.jpg);
           background-repeat: no-repeat;
           background-position:center;
-          background-size: 100%;
+          background-size: cover;
         }
         .twenty{
           grid-column:6/9;
           background:url(../img/kaspersky.jpg);
           background-repeat: no-repeat;
           background-position:center;
-          background-size: 100%;
+          background-size: cover;
         }
         .twenty-one{
           grid-column:4/7;
           background:url(../img/canaryfarms.jpg);
           background-repeat: no-repeat;
           background-position:center;
-          background-size: 100%;
+          background-size: cover;
         }
         .twent-two{
           grid-column:7/9;
           background:url(../img/crystal.jpg);
           background-repeat: no-repeat;
           background-position:center;
-          background-size: 100%;
+          background-size: cover;
         }
       }
           .content-two div{
@@ -608,7 +608,7 @@ li{
               background:url(../img/asian-star.jpg);
               background-repeat: no-repeat;
               background-position:center;
-              background-size: 100%;
+              background-size: cover;
             }
             .twent-four{
               grid-column: 5/8;
@@ -616,7 +616,7 @@ li{
               background:url(../img/paradise-group.jpg);
               background-repeat: no-repeat;
               background-position:center;
-              background-size: 100%;
+              background-size: cover;
             }
             .twent-five{
               grid-column: 8/11;
@@ -624,7 +624,7 @@ li{
               background:url(../img/cubit-homes.jpg);
               background-repeat: no-repeat;
               background-position:center;
-              background-size: 100%;
+              background-size: cover;
             }
             .twent-six{
               grid-column: 5/8;
@@ -632,7 +632,7 @@ li{
               background:url(../img/satra-properties.jpg);
               background-repeat: no-repeat;
               background-position:center;
-              background-size: 100%;
+              background-size: cover;
             }
             .twent-seven{
               grid-column: 1/5;
@@ -640,7 +640,7 @@ li{
               background:url(../img/citylife.jpg);
               background-repeat: no-repeat;
               background-position:center;
-              background-size: 100%;
+              background-size: cover;
             }
             .twent-eight{
               grid-column: 8/11;
@@ -648,7 +648,7 @@ li{
               background:url(../img/thakkers.jpg);
               background-repeat: no-repeat;
               background-position:center;
-              background-size: 100%;
+              background-size: cover;
             }
             .twent-nine{
               grid-column: 1/4;
@@ -656,7 +656,7 @@ li{
               background:url(../img/runal-one.jpg);
               background-repeat: no-repeat;
               background-position:center;
-              background-size: 100%;
+              background-size: cover;
 
             }
             .thirty{
@@ -665,7 +665,7 @@ li{
               background:url(../img/shakehands.jpg);
               background-repeat: no-repeat;
               background-position:center;
-              background-size: 100%;
+              background-size: cover;
             }
             .thirty-one{
               grid-column: 6/9;
@@ -673,7 +673,7 @@ li{
               background:url(../img/keystone.jpg);
               background-repeat: no-repeat;
               background-position:center;
-              background-size: 100%;
+              background-size: cover;
             }
             .thirty-two{
               grid-column: 9/11;
@@ -681,7 +681,7 @@ li{
               background:url(../img/continental.jpg);
               background-repeat: no-repeat;
               background-position:center;
-              background-size: 100%;
+              background-size: cover;
             }
 
 
