--- a/css/style.css
+++ b/css/style.css
@@ -611,14 +611,14 @@ header {
       background: url(../img/digital-latte.jpg);
       background-repeat: no-repeat;
       background-position: center;
-      background-size: 100%; }
+      background-size: cover; }
     .my_portfolio .portfolio .fourtin {
       grid-column: 8/15;
       grid-row: 11/14;
       background: url(../img/hipec.jpg);
       background-repeat: no-repeat;
       background-position: center;
-      background-size: 100%; }
+      background-size: cover; }
     .my_portfolio .portfolio .content-two {
       display: grid;
       max-width: 100%;
@@ -631,52 +631,52 @@ header {
         background: url(../img/akshar.jpg);
         background-repeat: no-repeat;
         background-position: center;
-        background-size: 100%; }
+        background-size: cover; }
       .my_portfolio .portfolio .content-two .sixteen {
         grid-column: 4/6;
         grid-row: 1/4;
         background: url(../img/brew-a-web.jpg);
         background-repeat: no-repeat;
         background-position: center;
-        background-size: 100%; }
+        background-size: cover; }
       .my_portfolio .portfolio .content-two .seventeen {
         grid-column: 6/9;
         grid-row: 1/4;
         background: url(../img/renaissance.jpg);
         background-repeat: no-repeat;
         background-position: center;
-        background-size: 100%; }
+        background-size: cover; }
       .my_portfolio .portfolio .content-two .eighteen {
         grid-column: 1/4;
         grid-row: 3/6;
         background: url(../img/new-haven.jpg);
         background-repeat: no-repeat;
         background-position: center;
-        background-size: 100%; }
+        background-size: cover; }
       .my_portfolio .portfolio .content-two .ninteen {
         grid-column: 4/6;
         background: url(../img/peninsula.jpg);
         background-repeat: no-repeat;
         background-position: center;
-        background-size: 100%; }
+        background-size: cover; }
       .my_portfolio .portfolio .content-two .twenty {
         grid-column: 6/9;
         background: url(../img/kaspersky.jpg);
         background-repeat: no-repeat;
         background-position: center;
-        background-size: 100%; }
+        background-size: cover; }
       .my_portfolio .portfolio .content-two .twenty-one {
         grid-column: 4/7;
         background: url(../img/canaryfarms.jpg);
         background-repeat: no-repeat;
         background-position: center;
-        background-size: 100%; }
+        background-size: cover; }
       .my_portfolio .portfolio .content-two .twent-two {
         grid-column: 7/9;
         background: url(../img/crystal.jpg);
         background-repeat: no-repeat;
         background-position: center;
-        background-size: 100%; }
+        background-size: cover; }
     .my_portfolio .portfolio .content-two div {
       background: #00aeeff0; }
     .my_portfolio .portfolio .content-three {
@@ -691,70 +691,70 @@ header {
         background: url(../img/asian-star.jpg);
         background-repeat: no-repeat;
         background-position: center;
-        background-size: 100%; }
+        background-size: cover; }
       .my_portfolio .portfolio .content-three .twent-four {
         grid-column: 5/8;
         grid-row: 1/3;
         background: url(../img/paradise-group.jpg);
         background-repeat: no-repeat;
         background-position: center;
-        background-size: 100%; }
+        background-size: cover; }
       .my_portfolio .portfolio .content-three .twent-five {
         grid-column: 8/11;
         grid-row: 1/4;
         background: url(../img/cubit-homes.jpg);
         background-repeat: no-repeat;
         background-position: center;
-        background-size: 100%; }
+        background-size: cover; }
       .my_portfolio .portfolio .content-three .twent-six {
         grid-column: 5/8;
         grid-row: 3/6;
         background: url(../img/satra-properties.jpg);
         background-repeat: no-repeat;
         background-position: center;
-        background-size: 100%; }
+        background-size: cover; }
       .my_portfolio .portfolio .content-three .twent-seven {
         grid-column: 1/5;
         grid-row: 4/6;
         background: url(../img/citylife.jpg);
         background-repeat: no-repeat;
         background-position: center;
-        background-size: 100%; }
+        background-size: cover; }
       .my_portfolio .portfolio .content-three .twent-eight {
         grid-column: 8/11;
         grid-row: 4/6;
         background: url(../img/thakkers.jpg);
         background-repeat: no-repeat;
         background-position: center;
-        background-size: 100%; }
+        background-size: cover; }
       .my_portfolio .portfolio .content-three .twent-nine {
         grid-column: 1/4;
         grid-row: 6/9;
         background: url(../img/runal-one.jpg);
         background-repeat: no-repeat;
         background-position: center;
-        background-size: 100%; }
+        background-size: cover; }
       .my_portfolio .portfolio .content-three .thirty {
         grid-column: 4/6;
         grid-row: 6/9;
         background: url(../img/shakehands.jpg);
         background-repeat: no-repeat;
         background-position: center;
-        background-size: 100%; }
+        background-size: cover; }
       .my_portfolio .portfolio .content-three .thirty-one {
         grid-column: 6/9;
         grid-row: 6/9;
         background: url(../img/keystone.jpg);
         background-repeat: no-repeat;
         background-position: center;
-        background-size: 100%; }
+        background-size: cover; }
       .my_portfolio .portfolio .content-three .thirty-two {
         grid-column: 9/11;
         grid-row: 6/9;
         background: url(../img/continental.jpg);
         background-repeat: no-repeat;
         background-position: center;
-        background-size: 100%; }
+        background-size: cover; }
     .my_portfolio .portfolio .content-three div {
       background: #00aeeff0; }
 
