--- a/sass/style.scss
+++ b/sass/style.scss
@@ -36,6 +36,7 @@
         h2{
             @include heading;
             margin-top:130px;
+            color:$black;
             span{
                 font-weight: bold;
                 font-size: 42px;
@@ -43,6 +44,7 @@
         }
         p{
             @include para;
+            color:$black;
         }
     }
 }
